--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
- - machine_learning.md
+ - language_models.md
  - self_driving_cars.md
  - market_trading.md
  - blog.md
