--- a/_config.yml
+++ b/_config.yml
@@ -94,3 +94,6 @@ plugins:
  - jekyll-pdf-embed # Per example at https://github.com/MihajloNesic/minimal-mistakes-pdf-example/
 
 future: true
+
+# GitHub repository configuration
+repository: bitdribble/bitdribble.github.io
