--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,25 @@ site_map:
 # Build settings
 # theme: minima  # Removed - using Tailwind CSS instead
 
+# Collections
+collections:
+  posts:
+    output: true
+    permalink: /:categories/:title/
+
+# Pagination configuration for jekyll-paginate-v2
+pagination:
+  enabled: true
+  per_page: 5
+  permalink: '/page/:num/'
+  title: ':title - Page :num'
+  limit: 0
+  trail:
+    before: 2
+    after: 2
+  sort_field: 'date'
+  sort_reverse: true
+
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
