--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
 show_excerpts: false # set to true to show excerpts on the homepage
 permalink: pretty
 baseurl: ""
+logo: /assets/images/analytiq_hub_logo_small.png
 
 
 # Minima date format
