Fix blog display

--- a/_config.yml
+++ b/_config.yml
@@ -129,4 +129,4 @@ plugins:
 future: true
 
 # GitHub repository configuration
-repository:  analytiq-hub/analytiq-hub.github.io 
+repository:  analytiq-hub/sigagent.github.io 
