Use analytiq-pages-theme

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ show_excerpts: false # set to true to show excerpts on the homepage
 permalink: pretty
 baseurl: ""
 
+# Calendly integration
+calendly_url: "https://calendly.com/analytiqhub"
+
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
